fixed profile props

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -12,7 +12,7 @@
   border: 1px solid grey;
   margin: 0;
   padding: 15px 0px;
-  color: #ffffff;
+  color: black;
   text-shadow: black 2px 2px
 }
 
