--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -37,7 +37,7 @@
   top: 0;
   width: 100%;
   z-index: 1;
-  height: 77px;
+  height: 4.5em;
 }
 
 .userPhotos {
@@ -53,23 +53,36 @@ font-family: 'Grand Hotel', cursive;
 font-family: 'Quicksand', sans-serif;
 }
 
-.site {
-  padding-top: 20px;
-  width: 176px;
-  height: 35px;
-  display: inline-block;
-  cursor: pointer;
-  color: black;
-}
-
 .cameraIcon {
-  margin-left: 18%;
-  padding-top: 20px;
-  width: 50px;
-  height: 35px;
-  display: inline-block;
-  justify-content: flex-start;
-  cursor: pointer;
+  padding-left: 15%;
+  top: 1.5em;
+  width: 2em;
+  height: 1.5em;
   color: black;
   position: fixed;
+}
+
+.site{
+  position: fixed;
+  padding-left: 2em;
+  top: 0;
+}
+
+.iconDistance{
+  padding-left: 2em;
+}
+
+.iconTop{
+  padding-top: 1.5em;
+  padding-left: 60%;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+.inputBar{
+  position: fixed;
+  margin-top: 2%;
+  left: 46%
 }
