--- a/frontend/src/components/SinglePhoto.css
+++ b/frontend/src/components/SinglePhoto.css
@@ -1,8 +1,18 @@
+body {
+    background-color: rgb(250, 250, 250);
+    font-size: 10px;
+}
+
 .single-photo-container {
     display: flex;
-    width: 933px;
+    width: 932px;
     height: 600px;
-    background-color: rgb(163, 163, 255);
+    border: 1.3px solid rgb(230, 230, 230);
+    border-radius: 5px;
+    margin: 0 auto;
+    margin-top: 3%;
+    font-size: 1.4em;
+    color: rgb(55, 55, 55);
 }
 
 .single-photo {
@@ -17,10 +27,72 @@
 
 .single-photo-details {
     width: 335px;
+    background-color: white;
+    padding: 3%;
+    text-align: left;
+}
+
+.author-name {
+    font-weight: 600;
+    margin-right: 3%;
+}
+
+.single-photo-author {
+    border-bottom: 1px solid rgb(230, 230, 230);
+    padding-bottom: 6%;
+    display: flex;
+    align-items: center;
 }
 
 .prof-img-small {
-    height: 30px;
-    width: 30px;
+    height: 36px;
+    width: 36px;
     border-radius: 100%;
+    margin-right: 6%;
+}
+
+.single-photo-caption {
+    padding-top: 6%;
+    height: 60%;
+    line-height: 1.2rem;
+}
+
+.single-photo-liked-status {
+    border-top: 1px solid rgb(230, 230, 230);
+    padding-top: 6%;
+}
+
+.single-photo-likes {
+    padding: 6% 0;
+    border-bottom: 1px solid rgb(230, 230, 230);
+}
+
+form {
+    padding: 6% 0;
+}
+
+input[type='text'] {
+    border: none;
+    font-size: 1.2em;
+    color: rgb(55, 55, 55);
+}
+
+input[type='text']::placeholder {
+    /* font-size: 1.2em; */
+    color: rgb(140, 140, 140);
+}
+
+input[type='text']:focus {
+    outline: none;
+}
+
+
+@media screen and (max-width: 1000px) {
+    .single-photo-container {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    /* make it look mobile */
 }
