--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-size: 10px;
 }
 
 .App-logo {
@@ -39,6 +40,41 @@
   height: 6em;
   position: fixed;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.topbar a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+.topbar .fa-2x {
+  padding: 0 3%;
+}
+
+.topbar-left {
+  background-color: salmon;
+  width: 30%;
+}
+
+.topbar-sitename {
+  font-size: 2.2em;
+}
+
+.topbar-middle {
+  background-color: goldenrod;
+  width: 30%;
+}
+
+.topbar-middle form {
+  padding: 0;
+  margin: 0;
+}
+
+.topbar-right {
+  background-color: yellowgreen;
+  width: 30%;
 }
 
 .fontColor{
@@ -87,14 +123,20 @@ font-family: 'Quicksand', sans-serif;
   cursor: pointer;
 }
 
-/* .searchBar{
-  position: fixed;
+.searchBar {
+  padding: 3%;
+  text-align: center;
+  /* position: fixed;
   margin-top: 1%;
   left: 43.35%;
   width: 13%;
   height: 26px;
-  text-align: center;
-} */
+  text-align: center; */
+}
+
+.searchBar:focus {
+  outline: none;
+}
 
 .loginBox{
   text-align: center;
