Added comments to LoginUser component to see where the divs end. Changed styles to the login box to compensate for moving stuff around while styling topbar.

--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -74,9 +74,9 @@
     font-weight: 600;
 }
 
-.homefeed-card-caption {
-    /* background-color: rgb(255, 255, 255); */
-}
+/* .homefeed-card-caption {
+    background-color: rgb(255, 255, 255);
+} */
 
 @media screen and (max-width: 940px) {
     .homefeed-card-container {
