--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -149,7 +149,7 @@ font-family: 'Quicksand', sans-serif;
 
 
 /*--------------------------------------------*/
-/*           Login Page and Login Box         */
+/*         Login/Register Page and Box        */
 /*--------------------------------------------*/
 .login-user-container,
 .register-user-container {
@@ -195,7 +195,44 @@ font-family: 'Quicksand', sans-serif;
   font-weight: bold;
 }
 
-.usernameBox{
+.login-user-container form input[type='text'],
+.login-user-container form input[type='password'],
+.register-user-container form input[type='text'],
+.register-user-container form input[type='email'],
+.register-user-container form input[type='password'] {
+  background-color: rgb(250, 250, 250);
+  outline: none;
+  height: 38px;
+  width: 80%;
+  padding: 3%;
+  border: none;
+  border: 1px solid #efefef;
+  border-radius: 3px;
+  box-sizing: border-box;
+  flex-direction: row;
+  position: relative;
+  color: #262626;
+  font-size: 14px;
+  margin-bottom: 6px;
+}
+
+.login-user-container form input[type='text']::placeholder,
+.login-user-container form input[type='password']::placeholder,
+.register-user-container form input[type='text']::placeholder,
+.register-user-container form input[type='email']::placeholder,
+.register-user-container form input[type='password']::placeholder {
+  color: rgb(200, 200, 200);
+}
+
+.login-user-container form input[type='text']:focus,
+.login-user-container form input[type='password']:focus,
+.register-user-container form input[type='text']:focus,
+.register-user-container form input[type='email']:focus,
+.register-user-container form input[type='password']:focus {
+  outline: 1px solid #b8b8b8;
+}
+
+/* .usernameBox{
   height: 38px;
   border-radius: 3px;
   box-sizing: border-box;
@@ -218,7 +255,7 @@ font-family: 'Quicksand', sans-serif;
   position: relative;
   width: 80%;
   border: 1px solid #efefef;
-}
+} */
 
 .messageSize{
   font-size: 12px;
@@ -291,7 +328,7 @@ font-family: 'Quicksand', sans-serif;
   padding: 10px 0;
 } */
 
-.inputBoxes {
+/* .inputBoxes {
   height: 38px;
   border-radius: 3px;
   box-sizing: border-box;
@@ -301,7 +338,7 @@ font-family: 'Quicksand', sans-serif;
   position: relative;
   width: 80%;
   border: 1px solid #efefef;
-}
+} */
 
 /* .topSpacing1{
   top: 8px;
