Renders how many likes each photo has

--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -76,6 +76,10 @@
     font-weight: 600;
 }
 
+.homefeed-caption-username {
+    font-weight: 600;
+}
+
 /* .homefeed-card-caption {
     background-color: rgb(255, 255, 255);
 } */
