--- a/frontend/src/components/SinglePhoto.css
+++ b/frontend/src/components/SinglePhoto.css
@@ -1,7 +1,18 @@
+/*--------------------------------------------*/
+/*                   Fonts                    */
+/*--------------------------------------------*/
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+
+
 body {
     background-color: rgb(250, 250, 250);
     font-size: 10px;
+    font-family: 'Roboto', sans-serif;
 }
+
+/*--------------------------------------------*/
+/*              SinglePhoto.jsx               */
+/*--------------------------------------------*/
 
 .single-photo-container {
     display: flex;
