--- a/frontend/src/components/SinglePhoto.css
+++ b/frontend/src/components/SinglePhoto.css
@@ -1,13 +1,14 @@
 /*--------------------------------------------*/
 /*                   Fonts                    */
 /*--------------------------------------------*/
-@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,500');
 
 
 body {
     background-color: rgb(250, 250, 250);
     font-size: 10px;
     font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 /*--------------------------------------------*/
