--- a/frontend/src/components/Followers.css
+++ b/frontend/src/components/Followers.css
@@ -25,7 +25,17 @@
     width: 100%;
 }
 
-.each-follower-box{
+/* .follower-list-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+} */
+.followers-title, .each-follower-box{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+/* .each-follower-box{
     font-size: 14px;
     font-weight: 600;
     line-height: 18px;
@@ -33,4 +43,32 @@
     padding-left: 5px;
     margin-left: 5px;
     cursor: pointer;
+    float: left;
+    width:900px
+} */
+
+.follower-profile-pic{
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+
+.follower-username{
+    font-size: 14px;
+    color: #262626;
+    font-weight: 600;
+    line-height: 18px;
+    text-decoration: none;
+}
+
+.follower-fullname{
+    color: #999;
+    display: block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+}
+.users{
+    display: flex;
+    justify-content: flex-start;
 }
